--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Outfit', sans-serif;
+    box-sizing: border-box;
 }
 body{
     background-color: var(--light-grey);
@@ -22,31 +23,33 @@ body{
 }
 .container{
     background-color: white;
-    width: 214px;
-    height: 333px;
+    width: 320px;
+    height: 512px;
     border-radius: 16px;
 }
 .container-qr{
+    width: 100%;
+    
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .container-qr img{
     border-radius: 18px;
-    padding: 0.6rem;
-    width: 194px;
-    height: 192px;
+    padding: 0.9rem;
+    width: 100%;
+    height: 100%;
 }
 .title{
     padding: 0.6rem;
-    font-size: 15px;
+    font-size: 24px;
     text-align: center;
     font-weight: 800;
     color: var(--mariana-blue);
 }
 .instructions{
     padding: 0.1rem;
-    font-size: 10px;
+    font-size: 15px;
     text-align: center;
     color: var(--gray-blue);
 }
